In uvm_proc_exit bail out early if we have no vmspace yet (as it happens for failing posix_spawn child processes). Fixes PR kern/45991.